--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -743,8 +743,8 @@ a#showLeftPush.hiddenclass {
 }
 #regForm input {
 	display: block;
-	height: calc(1.15em + .35rem + 2px);
-	padding: .75rem .75rem;
+	padding: .375rem .75rem;
+	height: calc(1.5em + .75rem + 2px);
 	font-size: .875rem;
 	font-weight: 400;
 	line-height: 1.2rem;
@@ -756,8 +756,9 @@ a#showLeftPush.hiddenclass {
 	transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 	width: 100%;
 }
-#regForm select {font-size: .875rem;}
-
+#regForm select {
+	font-size: .875rem;
+}
 /* Mark input boxes that gets an error on validation: */
 #regForm input.invalid, #regForm select.invalid {
 	background-color: #ffdddd;
@@ -779,7 +780,6 @@ a#showLeftPush.hiddenclass {
 	border-radius: 50%;
 	display: inline-block;
 	opacity: 0.85;
-	padding: 3px;
 	color: #333;
 }
 #regForm .step.active {
