--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1646,7 +1646,7 @@ input#readMore_check_id {
 	border-top: none;
 	border-radius: 0;
 	background-color: #f5f5f5;
-	margin-bottom: 0;
+	margin-bottom: 2px;
 	padding: 1rem;
 }
 .tab-card-header {
