ISSUE  705  PUROSE: Data Entry

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -781,6 +781,7 @@ a#showLeftPush.hiddenclass {
 	display: inline-block;
 	opacity: 0.85;
 	color: #333;
+	padding: 3px;
 }
 #regForm .step.active {
 	opacity: 1;
