--- a/shared/css/customstyles_jquery-ui.css
+++ b/shared/css/customstyles_jquery-ui.css
@@ -42,6 +42,9 @@ customstyles_jquery-ui.css  */
 	font-weight: 450;
 
 }
+.ui-widget input.btn {
+	padding:.25rem .5rem .15rem;
+}
 button.ui.multiselect {
 	width: 100% !important;
 }
