--- a/shared/css/customstyles_jquery-ui.css
+++ b/shared/css/customstyles_jquery-ui.css
@@ -7,23 +7,22 @@ customstyles_jquery-ui.css  */
 /*  dropdown (JQuery) taken from Arctos*/
 /***************************************/
 .ui-widget {
-	font-size: .875em;
+	font-size: .875rem;
 }
 .ui-widget button {
-	padding: .3em .5em;
-    font-size: .95em;
-    line-height: 1em;
-    border-radius: .2rem;
+	padding: .2rem .5rem;
+    font-size: .875rem;
+    line-height: 1.15rem;
+    border-radius: .2em;
 }
 .ui-multiselect {
-	padding: .25em .5em;
-	padding: .32em .5em;
+	padding: .2rem .5rem;
 	margin: 0;
 	font-size: .875rem;
 	border-radius: .2em;
 	font-weight: 500;
 	padding-left: 12px;
-	line-height: 1.5em;
+	line-height: 1.15rem;
 	color: #495057;
 }
 .ui-widget input, .ui-widget select, .ui-widget textarea,.ui-dialog input[type=text], .ui-dialog select, .ui-dialog textarea  {
