--- a/shared/css/customstyles_jquery-ui.css
+++ b/shared/css/customstyles_jquery-ui.css
@@ -13,13 +13,13 @@ customstyles_jquery-ui.css  */
 	padding: .2rem .5rem;
     font-size: .875rem;
     line-height: 1.15rem;
-    border-radius: .2em;
+    border-radius: .2rem;
 }
 .ui-multiselect {
 	padding: .2rem .5rem;
 	margin: 0;
 	font-size: .875rem;
-	border-radius: .2em;
+	border-radius: .2rem;
 	font-weight: 500;
 	padding-left: 12px;
 	line-height: 1.15rem;
@@ -34,7 +34,7 @@ customstyles_jquery-ui.css  */
 	border: 1px solid #ced4da;
 	background-clip: padding-box;
 	background-color: #fff;
-	border-radius: .2em;
+	border-radius: .2rem;
 	vertical-align: middle;
 	font-size: .875rem;
 	transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
