Style fix to specimen search so fields are the same height.

--- a/shared/css/customstyles_jquery-ui.css
+++ b/shared/css/customstyles_jquery-ui.css
@@ -16,7 +16,7 @@ customstyles_jquery-ui.css  */
     border-radius: .2rem;
 }
 .ui-multiselect {
-	padding: .2rem .5rem;
+	padding: .5rem .5rem .2rem .5rem;
 	margin: 0;
 	font-size: .875rem;
 	border-radius: .2rem;
