--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -247,11 +247,7 @@ BELOW: Small Form button (bootstrap override)
 .btn-outline-primary {
 	background-color: white;
 }
-.btn-outline-primary:not(:disabled):not(.disabled).active, .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled):hover,.show>.btn-outline-primary.dropdown-toggle {
-    color: #343a40;
-    background-color: rgba(0, 123, 255, .25);
-    border-color: hsl(0, 2%, 47%);
-}
+
 .btn-info {
 	color: #fff;
 	background-color: #17a2b8;
@@ -1718,8 +1714,23 @@ button[tabindex="-1"]:focus {
 .hidden {
 	display: none;
 }
-.show {display:block;}
-
+.show {
+	display:block;
+}
+a.btn-outline-primary {
+    backgroun-color: white;
+    padding-bottom: .05rem;
+    color: #007bff;
+    text-decoration:none;
+    font-size: .785rem;
+}
+a.btn-outline-primary:hover,a.btn-outline-primary:not(:disabled):not(.disabled):active {
+    background-color: #007bff;
+    text-decoration:none;
+    color: white;
+    padding-bottom: .05rem;
+    font-size: .785rem;
+}
 /************end tabs -- redone for accessibility  ***************/
 
 
