Bug 4462:(1) Change button link to edit taxon to a link. DESC:
Added a.btn-outline-primary and a.btn-outline-primary:hover,a.btn-outline-primary:not(:disabled):not(.disabled):active to custom_styles.css//
Changed html to <a class="btn-xs px-2 btn-outline-primary" href=".../taxonomy/Taxonomy.cfm...">Edit</a> on Taxa.cfm.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -269,6 +269,7 @@ BELOW: Small Form button (bootstrap override)
 .btn-outline-primary {
 	background-color: white;
 }
+
 .btn-info {
 	color: #fff;
 	background-color: #17a2b8;
@@ -1742,7 +1743,20 @@ div[aria-hidden='false'] {
 .show {
 	display:block;
 }
-
+a.btn-outline-primary {
+    backgroun-color: white;
+    padding-bottom: .05rem;
+    color: #007bff;
+    text-decoration:none;
+    font-size: .785rem;
+}
+a.btn-outline-primary:hover,a.btn-outline-primary:not(:disabled):not(.disabled):active {
+    background-color: #007bff;
+    text-decoration:none;
+    color: white;
+    padding-bottom: .05rem;
+    font-size: .785rem;
+}
 /************end tabs -- redone for accessibility  ***************/
 /****************end all screen styles*********************/
 /**********************************************************/
