Bug 4462: (2) Edit button in taxonomy results changed to link
DESC:  Needed "!important" after color:white; See line 1756 on custom_styles.cfm (for active row on Grid) to overwrite "jqx-fill-state-pressed a" color.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1727,7 +1727,7 @@ a.btn-outline-primary {
 a.btn-outline-primary:hover,a.btn-outline-primary:not(:disabled):not(.disabled):active {
     background-color: #007bff;
     text-decoration:none;
-    color: white;
+    color: white !important;
     padding-bottom: .05rem;
     font-size: .785rem;
 }
