ISSUE: 736  Redesign borrow page  DESC:  styles

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1744,7 +1744,7 @@ div[aria-hidden='false'] {
 	display:block;
 }
 a.btn-outline-primary {
-    backgroun-color: white;
+    background-color: white;
     padding-bottom: .05rem;
     color: #007bff;
     text-decoration:none;
@@ -1752,6 +1752,20 @@ a.btn-outline-primary {
 }
 a.btn-outline-primary:hover,a.btn-outline-primary:not(:disabled):not(.disabled):active {
     background-color: #007bff;
+    text-decoration:none;
+    color: white !important;
+    padding-bottom: .05rem;
+    font-size: .785rem;
+}
+a.btn-danger {
+    background-color: white;
+    padding-bottom: .05rem;
+    color: #bd2130;
+    text-decoration:none;
+    font-size: .785rem;
+}
+a.btn-danger:hover,a.btn-danger:not(:disabled):not(.disabled):active {
+    background-color: #bd2130;
     text-decoration:none;
     color: white !important;
     padding-bottom: .05rem;
