--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1771,6 +1771,10 @@ a.btn-danger:hover,a.btn-danger:not(:disabled):not(.disabled):active {
     padding-bottom: .05rem;
     font-size: .785rem;
 }
+.jqx-grid-cell-selected-light a.btn-danger:focus, .jqx-fill-state-pressed a.btn-danger {
+    color: #bd2130 !important; 
+    text-decoration: underline;
+}
 /************end tabs -- redone for accessibility  ***************/
 /****************end all screen styles*********************/
 /**********************************************************/
