--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1773,11 +1773,11 @@ a.btn-danger:hover,a.btn-danger:not(:disabled):not(.disabled):active {
 }
 .jqx-grid-cell-selected-light a.btn-danger:focus, .jqx-fill-state-pressed a.btn-danger {
     color: #bd2130 !important; 
-    text-decoration: underline;
+    text-decoration: none;
 }
-.jqx-grid-cell-selected-light a.btn-danger:focus:hover, .jqx-fill-state-pressed a.btn-danger:hover {
+.jqx-fill-state-pressed a.btn-danger:hover, .jqx-fill-state-pressed a.btn-danger.hover {
     color: #ffffff !important; 
-    text-decoration: underline;
+    text-decoration: none;
 }
 /************end tabs -- redone for accessibility  ***************/
 /****************end all screen styles*********************/
