--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1780,6 +1780,9 @@ a.btn-danger:hover,a.btn-danger:not(:disabled):not(.disabled):active {
     color: #ffffff !important; 
     text-decoration: none;
 }
+#agentDiv ul {
+	font-size: 0.96rem;
+}
 /************end tabs -- redone for accessibility  ***************/
 /****************end all screen styles*********************/
 /**********************************************************/
