--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1791,7 +1791,7 @@ a.btn-danger:hover,a.btn-danger:not(:disabled):not(.disabled):active {
 #agentDiv ul {
 	font-size: 0.95rem;
 }
-div#attributesDialog:empty {display:none;}
+div#attributesDialog_div:empty {display:none;}
 /************end tabs -- redone for accessibility  ***************/
 /****************end all screen styles*********************/
 /**********************************************************/
