ISSUE: Redmine 758 PURPOSE: Redesign for review loan/deaccession items pages.  DESCRIPTION: Distinguishing editable cells from non-editable, adding border styling to editable cells, only selected values are supported by jqxgrid, changing formatting of header color settings.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -169,8 +169,8 @@ h6, .h6 {
 }
 /* Editable cells in a jqx-grid */
 .editable-cell {
-	border-width: 1px 1px 1px 1px;
-	border-color: black;
+	border-width: 1px 1px 1px 1px !important;
+	border-color: black !important;
 }
 p {
 	margin-bottom: .75rem;
