--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1792,7 +1792,7 @@ a.btn-danger:hover,a.btn-danger:not(:disabled):not(.disabled):active {
 	font-size: 0.95rem;
 }
 
-div > .show > div div:empty {background:lime;}					
+.show > div:empty {background:lime;}					
 
 /************end tabs -- redone for accessibility  ***************/
 /****************end all screen styles*********************/
