--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1791,7 +1791,7 @@ a.btn-danger:hover,a.btn-danger:not(:disabled):not(.disabled):active {
 #agentDiv ul {
 	font-size: 0.95rem;
 }				
-
+div.card-body:-moz-only-whitespace {background-color: lime;}
 /************end tabs -- redone for accessibility  ***************/
 /****************end all screen styles*********************/
 /**********************************************************/
