--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -358,6 +358,7 @@ button:focus, input:focus, select:focus, button.focus, input.focus, select.focus
 	box-shadow: 0 0 0 0.12rem rgba(38, 143, 255, 0.5);
 	outline: 0;
 	border: 1px dotted #ccc;
+	box-shadow: 0 0 0 0.2rem rgb(0 123 255 / 25%);
 }
 span.data-entry-addon {
 	cursor: pointer;
@@ -1973,6 +1974,9 @@ a.btn-outline-primary:hover, a.btn-outline-primary:not(:disabled):not(.disabled)
 	color: white !important;
 	padding-bottom: .05rem;
 	font-size: .785rem;
+}
+.btn-outline-primary:focus {
+	box-shadow: 0 0 0 0.2rem rgb(0 123 255 /25%);
 }
 a.btn-danger {
 	background-color: white;
