ISSUE: BugID: 4845 PURPOSE: Display recipocal taxon relationships on edit taxon page as well as taxon details page. DESCRIPTION: Using cttaxon_relation.inverse_relation to display text for the nature of the inverse relationship, instead of switching order around taxon_relationship.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1759,6 +1759,9 @@ input#readMore_check_id {
 .list-style-disc {
 	list-style-type: disc;
 }
+.list-style-circle {
+	list-style-type: disc;
+}
 #overlay {
 	position: absolute;
 	top: 0;
