ISSUE: BugID: 4845 PURPOSE: Display recipocal taxon relationships on edit taxon page as well as taxon details page. DESCRIPTION: fixing style for list style circle.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1760,7 +1760,7 @@ input#readMore_check_id {
 	list-style-type: disc;
 }
 .list-style-circle {
-	list-style-type: disc;
+	list-style-type: circle;
 }
 #overlay {
 	position: absolute;
