--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -872,6 +872,7 @@ a#showLeftPush.hiddenclass {
 	display: inline-block;
 	opacity: 0.85;
 	color: #333;
+	padding: 3px;
 }
 #regForm .step.active {
 	opacity: 1;
