--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -22,6 +22,9 @@ input.goodPick, select.goodPick, textarea.goodPick {
 	line-height: 1.02;
 	font-weight: 450;
 }
+.height1p2 {
+	height: 1.2rem!important;
+}
 .small90 {
 	font-size: 89%
 }
