--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2077,7 +2077,8 @@ section#mediaSection.accordion {
 	background-color: rgb(199 251 255 / .35) !important;
 }
 .height1p2 {
-	height: 1.22rem!important;
+	height: 1.25rem!important;
+	font-size: 12px;
 }
 /************end tabs -- redone for accessibility  ***************/
 
