ISSUE: 705 DataEntry:  Provide all needed picklists, dialogs, and functionality for DataEntry Form PURPOSE:  links to the two forms.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2081,7 +2081,7 @@ section#mediaSection.accordion {
 	
 }
 .smallselect {
-	font-size: 86%;
+	font-size: 84%!important;
 }
 /************end tabs -- redone for accessibility  ***************/
 
