--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2093,22 +2093,23 @@ section#mediaSection.accordion {
 	transition: all 1s ease;
 }
 button.help-btn {
-  background-color: #1b1b1b;
-  color: white;
-  float:right;
-
--webkit-backface-visibility: hidden;
--webkit-transform: translateX(-98%) rotate(-90deg);
--webkit-transform-origin: right top;
--moz-transform: translateX(-98%) rotate(-90deg);
--moz-transform-origin: right top;
--o-transform: translateX(-98%) rotate(-90deg);
--o-transform-origin: right top;
-transform: translateX(-98%) rotate(-90deg);
-transform-origin: right top;
-margin-bottom: 15px;
+	background-color: #1b1b1b;
+	color: white;
+	float:right;
+	-webkit-backface-visibility: hidden;
+	-webkit-transform: translateX(-98%) rotate(-90deg);
+	-webkit-transform-origin: right top;
+	-moz-transform: translateX(-98%) rotate(-90deg);
+	-moz-transform-origin: right top;
+	-o-transform: translateX(-98%) rotate(-90deg);
+	-o-transform-origin: right top;
+	transform: translateX(-98%) rotate(-90deg);
+	transform-origin: right top;
+	margin-bottom: 15px;
 }
-#collapseExample h2.headerSm {font-size: 1.25rem;}
+#collapseExample h2.headerSm {
+	font-size: 1.25rem;
+}
 /************end tabs -- redone for accessibility  ***************/
 
 
