ISSUE: 809:  Search help button PURPOSE: moving styles to stylesheet custom_styles.css

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1602,7 +1602,7 @@ tr.line-top:first-child {
 }
 .infoLink {
 	cursor: pointer;
-	color: #3366cc;
+	color: #3366cc!important;
 	text-decoration: underline;
 }
 .infoLink:hover {
