--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2083,7 +2083,7 @@ section#mediaSection.accordion {
 .smallselect {
 	font-size: 84%!important;
 }
-#collapseExample.collapsing.width {
+#collapseKeyword.collapsing.width {
 	height: auto;
 	width: 0;
 	-webkit-transition: all 1s ease;
@@ -2115,13 +2115,13 @@ button.help-btn {
 	margin-top:0;
 	position: absolute;
 }
-#collapseExample h2.headerSm {
+#collapseKeyword h2.headerSm {
 	font-size: 1.25rem;
 }
-#collapseExample dt {
+#collapseKeyword dt {
 	float:left;
 	display: inline-block;
-	min-width: 25px;
+	min-width: 25px!important;
 }
 .collapseStyle {
 	z-index: 3000; 
