--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -834,11 +834,11 @@ a#showLeftPush.hiddenclass {
 }
 #regForm input {
 	display: block;
-	padding: .375rem .75rem;
-	height: calc(1.5em + .75rem + 2px);
+/*	padding: .375rem .75rem;
+	height: calc(1.5em + .75rem + 2px);*/
 	font-size: .875rem;
 	font-weight: 400;
-	line-height: 1.2rem;
+/*	line-height: 1.2rem;*/
 	color: #495057;
 	background-color: #fff;
 	background-clip: padding-box;
