--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -838,7 +838,8 @@ a#showLeftPush.hiddenclass {
 	height: calc(1.5em + .75rem + 2px);*/
 	font-size: .875rem;
 	font-weight: 400;
-/*	line-height: 1.2rem;*/
+	line-height: 1.6rem;
+	padding-right: .5rem;
 	color: #495057;
 	background-color: #fff;
 	background-clip: padding-box;
